--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #ecf0f1;
+    background-color: limegreen;
     font-family: 'Open Sans', sans-serif;
     display: flex;
     align-items: center;
